# zeroclaw

./: .actrc  .bazelignore  .bazelrc  .coderabbit.yaml  .cta.json  .dockerignore  .editorconfig  .env.codex-discord.example  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .semgrepignore  ACCESS_MATRIX.md  AGENTS.md  AI_NEWS_CURATOR_PLAN.md  BUILD.bazel  BUILD_AARCH64_GUIDE.md  CHANGELOG-next.md  CHANGELOG-v0.8.2-draft.md  CHANGELOG.md  CHAT_DATA_FIX.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Containerfile  DO-NOT-MERGE.md  Dockerfile  Dockerfile.alpine  Dockerfile.build-aarch64  Dockerfile.build-aarch64-cross  Dockerfile.build-aarch64-local  Dockerfile.ci  Dockerfile.debian  (+132 more)
apps/tauri/: Cargo.toml  Info.plist  TESTING.md  build.rs  tauri.bundled.conf.json  tauri.conf.json
apps/tui/: Cargo.toml
apps/zeroclaw-plugin-host/: Cargo.toml
apps/zerocode/: Cargo.toml  build.rs
apps/zerorelay/: Cargo.toml  Dockerfile  build.rs  compose.yaml  relay.example.toml
bins/engineer/: Cargo.toml
bins/wizard/: Cargo.toml
clients/android-bridge/: Cargo.toml
clients/ios-bridge/: Cargo.toml  build-ios.sh
cortex-mem的源码参考/cortex-mem-config/: Cargo.toml  README.md
cortex-mem的源码参考/cortex-mem-core/: Cargo.toml  README.md
cortex-mem的源码参考/cortex-mem-mcp/: Cargo.toml  README.md  config.toml
cortex-mem的源码参考/cortex-mem-tools/: Cargo.toml  README.md
crates/daemonclaw-identity/: Cargo.toml
crates/daemonclaw-install/: ACCESS_MATRIX.md  Cargo.toml
crates/daemonclaw-macros/: Cargo.toml
crates/daemonclaw-tui/: Cargo.toml
crates/lightwave-pyo3/: Cargo.toml  pyproject.toml
crates/osagent-manifest/: Cargo.toml
crates/osagent-tools-mcp/: Cargo.toml
crates/quantclaw-channels/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_validation.rs  fuzz_config_parse.rs  fuzz_provider_response.rs  fuzz_tool_params.rs  fuzz_webhook_payload.rs
multi_tenants/: .gitignore  Cargo.toml
multi_tenants/deploy/: caddy.env  platform.toml.example  zcplatform.service
multi_tenants/docker/: Dockerfile.egress  Dockerfile.tenant  egress-entrypoint.sh  tinyproxy.conf
multi_tenants/docs/: 01-vision-and-concept.md  02-architecture-overview.md  03-user-flows.md  04-backend-internals.md  05-frontend-internals.md  06-security-model.md  07-deployment-guide.md  08-configuration-reference.md  09-scaling-and-operations.md  10-service-provider-guide.md  11-api-reference.md  README.md
multi_tenants/scripts/: bootstrap.sh
multi_tenants/src/: config.rs  email.rs  error.rs  lib.rs  main.rs  state.rs
multi_tenants/web/: index.html  package-lock.json  package.json  vite.config.ts
python/: README.md  README.vi.md  pyproject.toml
python/jhedaiclaw_tools/: __init__.py  __main__.py  agent.py
python/tests/: test_tools.py
python/zeroclaw_tools/: __init__.py  __main__.py  agent.py
tests/: BUILD.bazel  agent_e2e.rs  agent_loop_robustness.rs  bot_isolation.rs  channel_routing.rs  cli_agent_tests.rs  codex_cli_provider.rs  config_agent_merge.rs  config_debug.rs  config_persistence.rs  config_schema.rs  conscience_gate_integration.rs  consciousness_integration.rs  continuity_preferences.rs  cortex_config_resolver_test.rs  cosmic_consensus_cf.rs  cosmic_free_energy_drift.rs  cosmic_gate_pool.rs  cosmic_modulation.rs  cosmic_persistence_roundtrip.rs  cosmic_pipeline.rs  dockerignore_test.rs  docs_pr_base_branch_consistency.rs  dual_compile_symmetry.rs  dynamic_tools_integration.rs  hooks_integration.rs  integration_multi_agent.rs  integration_tests.rs  lib.sh  memory_comparison.rs  memory_restart.rs  mobile_degrade_integration.rs  onboard_flow_pty.rs  openai_codex_vision_e2e.rs  phase5_gates.rs  phase5_migrate.rs  phase6_gates.rs  phase7_5_gates.rs  phase7_gates.rs  plugin_channel_runtime_e2e.rs  (+23 more)
tests/architecture/: cli_fluent_coverage.rs  config_save_isolation.rs  container_release.rs  desktop_release.rs  no_duplicate_state.rs  release_workflow.rs
tests/component/: agent_prompt_gate.rs  channel_bind_cli.rs  config_dir_locale_regression.rs  config_migration.rs  config_patch_cli.rs  config_persistence.rs  config_schema.rs  dockerignore_test.rs  fdx_parser.rs  gateway.rs  gemini_capabilities.rs  mod.rs  otel_dependency_feature_regression.rs  plugin_cli.rs  provider_resolution.rs  provider_schema.rs  reply_target_field_regression.rs  security.rs  skills_bundle_cli.rs  whatsapp_webhook_security.rs
tests/evals/: README.md  corpus.jsonl  golden_en.jsonl  golden_ko.jsonl  golden_law.jsonl  thresholds.toml
tests/fixtures/: data.txt
tests/integration/: Dockerfile.bridge  Dockerfile.qemu  README.md  agent.rs  agent_robustness.rs  approval_gate_herdr.rs  backup_cron_scheduling.rs  brain_compile_e2e.rs  bridge.toml  calendar_triggers.rs  channel_matrix.rs  channel_plugin_shadow.rs  channel_routing.rs  docker-compose.yml  email_attachments.rs  hook_execution_agent.rs  hook_execution_lifecycle.rs  hook_execution_post_send.rs  hooks.rs  knowledge_client.rs  memory_comparison.rs  memory_loop_continuity.rs  memory_restart.rs  mod.rs  node_e2e.rs  observability_hook.rs  plugin_allowed_channels_filter.rs  plugin_allowed_tools_filter.rs  plugin_api_auth_required.rs  plugin_api_disable_plugin.rs  plugin_api_enable_plugin.rs  plugin_api_feature_gate.rs  plugin_api_get_plugin.rs  plugin_api_install_auth_required.rs  plugin_api_install_endpoint.rs  plugin_api_install_error_descriptive.rs  plugin_api_install_uses_host_logic.rs  plugin_api_list_plugins.rs  plugin_api_reload_plugins.rs  plugin_api_remove_plugin.rs  (+167 more)
tests/live/: gemini_fallback_oauth_refresh.rs  history_pruning_rpc.rs  history_trim_battery.rs  mod.rs  openai_codex_vision_e2e.rs  providers.rs  zai_jwt_auth.rs
tests/plugins/: CLAUDE.md  Cargo.toml
tests/support/: assertions.rs  helpers.rs  mock_channel.rs  mock_model_provider.rs  mock_node.rs  mock_provider.rs  mock_tools.rs  mod.rs  platform_fixtures.rs  test_gateway.rs  trace.rs
tests/system/: daemon_ipc.rs  daemon_resilience.rs  daemon_stop.rs  full_stack.rs  (+4 more)
xtask/: Cargo.toml
(+20775 files in other folders)
