[workspace]
members = [".", "crates/quantclaw-api", "crates/quantclaw-infra", "crates/quantclaw-config", "crates/quantclaw-providers", "crates/quantclaw-memory", "crates/quantclaw-channels", "crates/quantclaw-tools", "crates/quantclaw-runtime", "crates/quantclaw-tui", "crates/quantclaw-plugins", "crates/quantclaw-gateway", "crates/quantclaw-hardware", "crates/quantclaw-tool-call-parser", "crates/robot-kit", "crates/aardvark-sys", "crates/quantclaw-macros", "apps/tauri"]
resolver = "2"

[workspace.package]
version = "0.6.9"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/quant-speed/quantclaw"
rust-version = "1.87"

[workspace.dependencies]
quantclaw-api = { path = "crates/quantclaw-api", version = "0.6.9" }
quantclaw-infra = { path = "crates/quantclaw-infra", version = "0.6.9" }
quantclaw-config = { path = "crates/quantclaw-config", version = "0.6.9", default-features = false }
quantclaw-providers = { path = "crates/quantclaw-providers", version = "0.6.9" }
quantclaw-memory = { path = "crates/quantclaw-memory", version = "0.6.9" }
quantclaw-channels = { path = "crates/quantclaw-channels", version = "0.6.9", default-features = false }
quantclaw-tools = { path = "crates/quantclaw-tools", version = "0.6.9" }
quantclaw-runtime = { path = "crates/quantclaw-runtime", version = "0.6.9", default-features = false }
quantclaw-tui = { path = "crates/quantclaw-tui", version = "0.6.9" }
quantclaw-plugins = { path = "crates/quantclaw-plugins", version = "0.6.9" }
quantclaw-gateway = { path = "crates/quantclaw-gateway", version = "0.6.9" }
quantclaw-hardware = { path = "crates/quantclaw-hardware", version = "0.6.9" }
quantclaw-tool-call-parser = { path = "crates/quantclaw-tool-call-parser", version = "0.6.9" }
quantclaw-macros = { path = "crates/quantclaw-macros", version = "0.6.9" }
aardvark-sys = { path = "crates/aardvark-sys", version = "0.1.0" }

[package]
name = "quantspeed"
version.workspace = true
edition.workspace = true
authors = ["theonlyhennygod"]
license.workspace = true
description = "Zero overhead. Zero compromise. 100% Rust. The fastest, smallest AI assistant."
repository.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version.workspace = true
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE*",
  "/README.md",
  "/web/dist/**/*",
  "/tool_descriptions/**/*",
]

[[bin]]
name = "quantclaw"
path = "src/main.rs"

[lib]
name = "quantclaw"
path = "src/lib.rs"

[dependencies]
# Internal workspace crates — versions and paths declared once in [workspace.dependencies]
quantclaw-api.workspace = true
quantclaw-infra.workspace = true
quantclaw-config.workspace = true
quantclaw-providers.workspace = true
quantclaw-memory.workspace = true
quantclaw-channels = { workspace = true, optional = true }
quantclaw-tools = { workspace = true, optional = true }
quantclaw-runtime = { workspace = true, optional = true }
quantclaw-tui = { workspace = true, optional = true }
quantclaw-plugins = { workspace = true, optional = true }
quantclaw-gateway = { workspace = true, optional = true }
quantclaw-hardware = { workspace = true, optional = true }
quantclaw-tool-call-parser.workspace = true
quantclaw-macros.workspace = true
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls", "blocking", "multipart", "stream", "socks", "http2"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Config
directories = "6.0"
toml = "1.0"
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# HTML to plain text conversion (web_fetch tool)
nanohtml2text = "0.2"

rumqttc = "0.24"

# Tarball extraction for binary updates
flate2 = "1"
tar = "0.4"

# Progress bars (update pipeline)
indicatif = "0.18"

# Temp files (update pipeline rollback)
tempfile = "3.26"

# Zip extraction for ClawhHub / OpenClaw registry installers
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Aardvark I2C/SPI/GPIO USB adapter (Total Phase) — stub when SDK absent
aardvark-sys.workspace = true

# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# Portable atomic fallbacks for targets without native 64-bit atomics
portable-atomic = "1"

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = { version = "0.17", optional = true }

# LRU cache for bounded sender state
lru = { version = "0.16", optional = true }

# Memory / persistence (migration.rs, behind agent-runtime)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", optional = true }
cron = { version = "0.15", optional = true }

# Interactive CLI prompts (memory CLI uses dialoguer unconditionally)
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# TUI onboarding (ratatui + crossterm)
ratatui = { version = "0.30", default-features = true, optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }

# Hardware discovery (device path globbing)
glob = { version = "0.3", optional = true }

# Nostr key validation for wizard (behind channel-nostr feature)
nostr-sdk = { version = "0.44", default-features = false, optional = true }

# Binary discovery (init system detection)
which = { version = "8.0", optional = true }

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.29", features = ["native-tls"], optional = true }
tokio-socks = { version = "0.5", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
regex = "1.10"
hostname = { version = "0.4.2", optional = true }
rustls = "0.22"
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
webpki-roots = { version = "1.0.6", optional = true }

# email
lettre = { version = "0.11.19", default-features = false, features = ["builder", "smtp-transport", "native-tls"], optional = true }
mail-parser = { version = "0.11.2", optional = true }
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false, optional = true }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"], optional = true }
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"], optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"], optional = true }
http-body-util = { version = "0.1", optional = true }

# rust-embed removed — web dashboard served from filesystem via gateway.web_dist_dir
mime_guess = { version = "2", optional = true }

# Use the blocking HTTP exporter client to avoid Tokio-reactor panics in
# non-Tokio contexts.

# (Linux, macOS, Windows). Android/Termux uses target_os="android" and is excluded.

# Uses wa-rs for Bot and Client, wa-rs-core for storage traits, custom rusqlite backend avoids Diesel conflict.

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = [
    "agent-runtime",
    "observability-prometheus",
    "schema-export",
]

# The full agent runtime — agent loop, channels, tools, gateway, TUI, all subsystems.
# Without this, you get the kernel: config + providers + memory + CLI chat.
agent-runtime = [
    "dep:quantclaw-runtime", "dep:quantclaw-channels", "dep:quantclaw-tools",
    "dep:rusqlite",
    "dep:ring", "dep:lru", "dep:chrono-tz", "dep:cron", "dep:glob", "dep:which",
    "dep:ratatui", "dep:crossterm",
    "dep:tokio-tungstenite", "dep:tokio-socks", "dep:hostname",
    "dep:native-tls", "dep:tokio-native-tls",
    "dep:lettre", "dep:mail-parser", "dep:async-imap",
    "dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower", "dep:tower-http", "dep:http-body-util",
    "dep:mime_guess",
    "gateway", "tui-onboarding",
    "channel-email", "channel-telegram", "channel-lark",
    "channel-discord", "channel-slack", "channel-signal",
    "channel-mattermost", "channel-irc", "channel-imessage",
    "channel-dingtalk", "channel-qq", "channel-bluesky",
    "channel-twitter", "channel-reddit", "channel-notion",
    "channel-linq", "channel-wati", "channel-nextcloud",
    "channel-mochat", "channel-wecom", "channel-clawdtalk",
    "channel-webhook", "channel-acp-server", "channel-whatsapp-cloud",
    "channel-voice-call",
]

# Major subsystems — each forwards to exactly ONE crate
gateway = ["dep:quantclaw-gateway"]
tui-onboarding = ["dep:quantclaw-tui"]
schema-export = ["quantclaw-config/schema-export"]

# Channels — each forwards directly to quantclaw-channels (1 hop)
channel-email = ["quantclaw-channels/channel-email"]
channel-telegram = ["quantclaw-channels/channel-telegram"]
channel-lark = ["quantclaw-channels/channel-lark"]
channel-nostr = ["quantclaw-channels/channel-nostr", "quantclaw-runtime/channel-nostr", "dep:nostr-sdk"]
channel-matrix = ["quantclaw-channels/channel-matrix"]
channel-discord = ["quantclaw-channels/channel-discord"]
channel-slack = ["quantclaw-channels/channel-slack"]
channel-signal = ["quantclaw-channels/channel-signal"]
channel-mattermost = ["quantclaw-channels/channel-mattermost"]
channel-irc = ["quantclaw-channels/channel-irc"]
channel-imessage = ["quantclaw-channels/channel-imessage"]
channel-dingtalk = ["quantclaw-channels/channel-dingtalk"]
channel-qq = ["quantclaw-channels/channel-qq"]
channel-bluesky = ["quantclaw-channels/channel-bluesky"]
channel-twitter = ["quantclaw-channels/channel-twitter"]
channel-reddit = ["quantclaw-channels/channel-reddit"]
channel-notion = ["quantclaw-channels/channel-notion"]
channel-linq = ["quantclaw-channels/channel-linq"]
channel-wati = ["quantclaw-channels/channel-wati"]
channel-nextcloud = ["quantclaw-channels/channel-nextcloud"]
channel-mochat = ["quantclaw-channels/channel-mochat"]
channel-wecom = ["quantclaw-channels/channel-wecom"]
channel-clawdtalk = ["quantclaw-channels/channel-clawdtalk"]
channel-webhook = ["quantclaw-channels/channel-webhook"]
channel-acp-server = ["quantclaw-channels/channel-acp-server"]
channel-whatsapp-cloud = ["quantclaw-channels/channel-whatsapp-cloud"]
channel-voice-call = ["quantclaw-channels/channel-voice-call"]
channel-feishu = ["channel-lark"]
whatsapp-web = ["quantclaw-channels/whatsapp-web"]
voice-wake = ["quantclaw-channels/voice-wake"]

# Backends and platform flags — each forwards to ONE crate
observability-prometheus = ["quantclaw-runtime/observability-prometheus"]
observability-otel = ["quantclaw-runtime/observability-otel"]
hardware = ["dep:quantclaw-hardware", "quantclaw-hardware/hardware"]
peripheral-rpi = ["dep:quantclaw-hardware", "quantclaw-hardware/peripheral-rpi"]
sandbox-landlock = ["quantclaw-runtime/sandbox-landlock"]
sandbox-bubblewrap = ["quantclaw-runtime/sandbox-bubblewrap"]
browser-native = ["quantclaw-tools/browser-native"]
plugins-wasm = ["dep:quantclaw-plugins", "quantclaw-runtime/plugins-wasm"]
probe = ["dep:quantclaw-hardware", "quantclaw-hardware/probe"]
rag-pdf = ["quantclaw-tools/rag-pdf"]
webauthn = ["quantclaw-runtime/webauthn"]

# Backward-compatible aliases
fantoccini = ["browser-native"]
landlock = ["sandbox-landlock"]
metrics = ["observability-prometheus"]

# CI meta-feature
ci-all = [
    "agent-runtime",
    "channel-nostr", "channel-matrix", "whatsapp-web",
    "observability-prometheus", "observability-otel",
    "hardware", "peripheral-rpi",
    "sandbox-landlock", "sandbox-bubblewrap",
    "browser-native", "plugins-wasm", "probe", "rag-pdf",
    "webauthn",
]

[profile.dev]
incremental = true
opt-level = 0

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.release-fast]
inherits = "release"
codegen-units = 8    # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
                     # Use: cargo build --profile release-fast

[profile.ci]
inherits = "release"
lto = "thin"         # Much faster than fat LTO; still catches release-mode issues
codegen-units = 16   # Full parallelism for CI runners

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
rcgen = "0.13"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"

[[bench]]
name = "agent_benchmarks"
harness = false
