[workspace]
members = [".", "crates/daemonclaw-api", "crates/daemonclaw-infra", "crates/daemonclaw-config", "crates/daemonclaw-providers", "crates/daemonclaw-memory", "crates/daemonclaw-channels", "crates/daemonclaw-tools", "crates/daemonclaw-runtime", "crates/daemonclaw-tui", "crates/daemonclaw-plugins", "crates/daemonclaw-gateway", "crates/daemonclaw-hardware", "crates/daemonclaw-tool-call-parser", "crates/robot-kit", "crates/aardvark-sys", "crates/daemonclaw-macros", "apps/tauri"]
resolver = "2"

[workspace.package]
version = "0.7.19"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DeliveryBoyTech/daemonclaw"
rust-version = "1.87"

[workspace.dependencies]
daemonclaw-api = { path = "crates/daemonclaw-api", version = "0.7.3" }
daemonclaw-infra = { path = "crates/daemonclaw-infra", version = "0.7.3" }
daemonclaw-config = { path = "crates/daemonclaw-config", version = "0.7.3", default-features = false }
daemonclaw-providers = { path = "crates/daemonclaw-providers", version = "0.7.3" }
daemonclaw-memory = { path = "crates/daemonclaw-memory", version = "0.7.3" }
daemonclaw-channels = { path = "crates/daemonclaw-channels", version = "0.7.3", default-features = false }
daemonclaw-tools = { path = "crates/daemonclaw-tools", version = "0.7.3" }
daemonclaw-runtime = { path = "crates/daemonclaw-runtime", version = "0.7.3", default-features = false }
daemonclaw-tui = { path = "crates/daemonclaw-tui", version = "0.7.3" }
daemonclaw-plugins = { path = "crates/daemonclaw-plugins", version = "0.7.3" }
daemonclaw-gateway = { path = "crates/daemonclaw-gateway", version = "0.7.3" }
daemonclaw-hardware = { path = "crates/daemonclaw-hardware", version = "0.7.3" }
daemonclaw-tool-call-parser = { path = "crates/daemonclaw-tool-call-parser", version = "0.7.3" }
daemonclaw-macros = { path = "crates/daemonclaw-macros", version = "0.7.3" }
aardvark-sys = { path = "crates/aardvark-sys", version = "0.1.0" }

[package]
name = "daemonclawlabs"
# Publishing blocked during microkernel workspace transition — see #5811.
# All 14 workspace sub-crates are publish = false and therefore unresolvable
# on crates.io. Flip or remove this once the multi-crate publish topology is
# designed per RFC #5579.
publish = false
version.workspace = true
edition.workspace = true
authors = ["theonlyhennygod"]
license.workspace = true
description = "Zero overhead. Zero compromise. 100% Rust. The fastest, smallest AI assistant."
repository.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "cli", "assistant", "chatbot"]
categories = ["command-line-utilities", "api-bindings"]
rust-version.workspace = true
include = [
  "/src/**/*",
  "/build.rs",
  "/Cargo.toml",
  "/Cargo.lock",
  "/LICENSE*",
  "/README.md",
  "/web/dist/**/*",
  "/tool_descriptions/**/*",
]

[[bin]]
name = "daemonclaw"
path = "src/main.rs"

[lib]
name = "daemonclaw"
path = "src/lib.rs"

[dependencies]
# Internal workspace crates — versions and paths declared once in [workspace.dependencies]
daemonclaw-api.workspace = true
daemonclaw-infra.workspace = true
daemonclaw-config.workspace = true
daemonclaw-providers.workspace = true
daemonclaw-memory.workspace = true
daemonclaw-channels = { workspace = true, optional = true }
daemonclaw-tools = { workspace = true, optional = true }
daemonclaw-runtime = { workspace = true, optional = true }
daemonclaw-tui = { workspace = true, optional = true }
daemonclaw-plugins = { workspace = true, optional = true }
daemonclaw-gateway = { workspace = true, optional = true }
daemonclaw-hardware = { workspace = true, optional = true }
daemonclaw-tool-call-parser.workspace = true
daemonclaw-macros.workspace = true
# CLI - minimal and fast
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Async runtime - feature-optimized for size
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "io-std", "fs", "signal"] }
tokio-util = { version = "0.7", default-features = false }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }

# HTTP client - minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking", "multipart", "stream", "socks"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

# Config
directories = "6.0"
toml = "1.0"
toml_edit = "0.25"  # already a transitive dep via toml — zero added compile/binary cost
shellexpand = "3.1"

# JSON Schema generation for config export
schemars = "1.2"

# Logging - minimal
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Base64 encoding (screenshots, image data)
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# URL encoding for web search
urlencoding = "2.1"

# HTML to plain text conversion (web_fetch tool)
nanohtml2text = "0.2"

rumqttc = "0.25"

# Tarball extraction for binary updates
flate2 = "1"
tar = "0.4"

# Progress bars (update pipeline)
indicatif = "0.18"

# Temp files (update pipeline rollback)
tempfile = "3.26"

# Zip extraction for ClawhHub / OpenClaw registry installers
zip = { version = "8.1", default-features = false, features = ["deflate-flate2"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Aardvark I2C/SPI/GPIO USB adapter (Total Phase) — stub when SDK absent
aardvark-sys.workspace = true

# UUID generation
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }

# Authenticated encryption (AEAD) for secret store
chacha20poly1305 = "0.10"

# HMAC for webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# CSPRNG for secure token generation
rand = "0.10"

# Portable atomic fallbacks for targets without native 64-bit atomics
portable-atomic = "1"

# Fast mutexes that don't poison on panic
parking_lot = "0.12"

# Async traits
async-trait = "0.1"

# HMAC-SHA256 (Zhipu/GLM JWT auth)
ring = { version = "0.17", optional = true }

# LRU cache for bounded sender state
lru = { version = "0.16", optional = true }

# Memory / persistence (migration.rs, behind agent-runtime)
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
chrono-tz = { version = "0.10", optional = true }
cron = { version = "0.15", optional = true }

# Interactive CLI prompts (memory CLI uses dialoguer unconditionally)
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"

# TUI onboarding (ratatui + crossterm)
ratatui = { version = "0.30", default-features = true, optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }

# Hardware discovery (device path globbing)
glob = { version = "0.3", optional = true }

# Nostr key validation for wizard (behind channel-nostr feature)
nostr-sdk = { version = "0.44", default-features = false, optional = true }

# Binary discovery (init system detection)
which = { version = "8.0", optional = true }

# WebSocket client channels (Discord/Lark/DingTalk/Nostr)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"], optional = true }
tokio-socks = { version = "0.5", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
regex = "1.10"
hostname = { version = "0.4.2", optional = true }
rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1.14.0", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
webpki-roots = { version = "1.0.6", optional = true }

# email
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"], optional = true }
mail-parser = { version = "0.11.2", optional = true }
async-imap = { version = "0.11", features = ["runtime-tokio"], default-features = false, optional = true }

# HTTP server (gateway) — replaces raw TCP for proper HTTP/1.1 compliance
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio", "query", "ws", "macros"], optional = true }
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "server-graceful"], optional = true }
tower = { version = "0.5", default-features = false, features = ["util"], optional = true }
tower-http = { version = "0.6", default-features = false, features = ["limit", "timeout"], optional = true }
http-body-util = { version = "0.1", optional = true }

# rust-embed removed — web dashboard served from filesystem via gateway.web_dist_dir
mime_guess = { version = "2", optional = true }

# Use the blocking HTTP exporter client to avoid Tokio-reactor panics in
# non-Tokio contexts.

# (Linux, macOS, Windows). Android/Termux uses target_os="android" and is excluded.

# Uses wa-rs for Bot and Client, wa-rs-core for storage traits, custom rusqlite backend avoids Diesel conflict.

# Unix-specific dependencies (for root check, etc.)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = [
    "agent-runtime",
    "observability-prometheus",
    "schema-export",
]

# The full agent runtime — agent loop, channels, tools, gateway, TUI, all subsystems.
# Without this, you get the kernel: config + providers + memory + CLI chat.
agent-runtime = [
    "dep:daemonclaw-runtime", "dep:daemonclaw-channels", "dep:daemonclaw-tools",
    "dep:rusqlite",
    "dep:ring", "dep:lru", "dep:chrono-tz", "dep:cron", "dep:glob", "dep:which",
    "dep:ratatui", "dep:crossterm",
    "dep:tokio-tungstenite", "dep:tokio-socks", "dep:hostname",
    "dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:tokio-rustls", "dep:webpki-roots",
    "dep:lettre", "dep:mail-parser", "dep:async-imap",
    "dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower", "dep:tower-http", "dep:http-body-util",
    "dep:mime_guess",
    "gateway", "tui-onboarding",
    "channel-email", "channel-telegram", "channel-lark",
    "channel-discord", "channel-slack", "channel-signal",
    "channel-mattermost", "channel-irc", "channel-imessage",
    "channel-dingtalk", "channel-qq", "channel-bluesky",
    "channel-twitter", "channel-reddit", "channel-notion",
    "channel-linq", "channel-wati", "channel-nextcloud",
    "channel-mochat", "channel-wecom", "channel-clawdtalk",
    "channel-webhook", "channel-acp-server", "channel-whatsapp-cloud",
    "channel-voice-call",
]

# Major subsystems — each forwards to exactly ONE crate
gateway = ["dep:daemonclaw-gateway"]
tui-onboarding = ["dep:daemonclaw-tui"]
schema-export = ["daemonclaw-config/schema-export"]

# Channels — each forwards directly to daemonclaw-channels (1 hop)
channel-email = ["daemonclaw-channels/channel-email"]
channel-telegram = ["daemonclaw-channels/channel-telegram"]
channel-lark = ["daemonclaw-channels/channel-lark"]
channel-nostr = ["daemonclaw-channels/channel-nostr", "daemonclaw-runtime/channel-nostr", "dep:nostr-sdk"]
channel-matrix = ["daemonclaw-channels/channel-matrix"]
channel-discord = ["daemonclaw-channels/channel-discord"]
channel-slack = ["daemonclaw-channels/channel-slack"]
channel-signal = ["daemonclaw-channels/channel-signal"]
channel-mattermost = ["daemonclaw-channels/channel-mattermost"]
channel-irc = ["daemonclaw-channels/channel-irc"]
channel-imessage = ["daemonclaw-channels/channel-imessage"]
channel-dingtalk = ["daemonclaw-channels/channel-dingtalk"]
channel-qq = ["daemonclaw-channels/channel-qq"]
channel-bluesky = ["daemonclaw-channels/channel-bluesky"]
channel-twitter = ["daemonclaw-channels/channel-twitter"]
channel-reddit = ["daemonclaw-channels/channel-reddit"]
channel-notion = ["daemonclaw-channels/channel-notion"]
channel-linq = ["daemonclaw-channels/channel-linq"]
channel-wati = ["daemonclaw-channels/channel-wati"]
channel-nextcloud = ["daemonclaw-channels/channel-nextcloud"]
channel-mochat = ["daemonclaw-channels/channel-mochat"]
channel-wecom = ["daemonclaw-channels/channel-wecom"]
channel-clawdtalk = ["daemonclaw-channels/channel-clawdtalk"]
channel-webhook = ["daemonclaw-channels/channel-webhook"]
channel-acp-server = ["daemonclaw-channels/channel-acp-server"]
channel-whatsapp-cloud = ["daemonclaw-channels/channel-whatsapp-cloud"]
channel-voice-call = ["daemonclaw-channels/channel-voice-call"]
channel-feishu = ["channel-lark"]
whatsapp-web = ["daemonclaw-channels/whatsapp-web"]
voice-wake = ["daemonclaw-channels/voice-wake"]

# Backends and platform flags — each forwards to ONE crate
observability-prometheus = [
    "daemonclaw-runtime/observability-prometheus",
    "daemonclaw-gateway/observability-prometheus",
]
observability-otel = ["daemonclaw-runtime/observability-otel"]
hardware = ["dep:daemonclaw-hardware", "daemonclaw-hardware/hardware"]
peripheral-rpi = ["dep:daemonclaw-hardware", "daemonclaw-hardware/peripheral-rpi"]
sandbox-landlock = ["daemonclaw-runtime/sandbox-landlock"]
sandbox-bubblewrap = ["daemonclaw-runtime/sandbox-bubblewrap"]
browser-native = ["daemonclaw-tools/browser-native"]
plugins-wasm = ["dep:daemonclaw-plugins", "daemonclaw-runtime/plugins-wasm"]
probe = ["dep:daemonclaw-hardware", "daemonclaw-hardware/probe"]
rag-pdf = ["daemonclaw-tools/rag-pdf"]
webauthn = ["daemonclaw-runtime/webauthn"]

# Backward-compatible aliases
fantoccini = ["browser-native"]
landlock = ["sandbox-landlock"]
metrics = ["observability-prometheus"]

# CI meta-feature
ci-all = [
    "agent-runtime",
    "channel-nostr", "channel-matrix", "whatsapp-web",
    "observability-prometheus", "observability-otel",
    "hardware", "peripheral-rpi",
    "sandbox-landlock", "sandbox-bubblewrap",
    "browser-native", "plugins-wasm", "probe", "rag-pdf",
    "webauthn",
]

[profile.dev]
incremental = true
opt-level = 0
split-debuginfo = "unpacked"

[profile.release]
opt-level = "z"      # Optimize for size
lto = "fat"          # Maximum cross-crate optimization for smaller binaries
codegen-units = 1    # Serialized codegen for low-memory devices (e.g., Raspberry Pi 3 with 1GB RAM)
                     # Higher values (e.g., 8) compile faster but require more RAM during compilation
strip = true          # Remove debug symbols
panic = "abort"      # Reduce binary size

[profile.release-fast]
inherits = "release"
codegen-units = 8    # Parallel codegen for faster builds on powerful machines (16GB+ RAM recommended)
                     # Use: cargo build --profile release-fast

[profile.ci]
inherits = "release"
lto = "thin"         # Much faster than fat LTO; still catches release-mode issues
codegen-units = 16   # Full parallelism for CI runners

[profile.dist]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3.26"
criterion = { version = "0.8", features = ["async_tokio"] }
wiremock = "0.6"
scopeguard = "1.2"
rcgen = "0.13"

[[test]]
name = "component"
path = "tests/test_component.rs"

[[test]]
name = "integration"
path = "tests/test_integration.rs"

[[test]]
name = "system"
path = "tests/test_system.rs"

[[test]]
name = "live"
path = "tests/test_live.rs"

[[bench]]
name = "agent_benchmarks"
harness = false

[patch.crates-io]
console = { path = "patches/console" }
